force-app/main/default/objects/Deployment_Execution__c/Deployment_Execution__c.object-meta.xml
<CustomObject>
    <description>Logs the execution of a deployment step</description>
    <label>Deployment Execution</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Deployment Execution</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Execution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>