force-app/main/default/objects/Deployment_Execution__c/fields/Executed_at__c.field-meta.xml
<CustomField>
    <fullName>Executed_at__c</fullName>
    <description>Time manual step has been executed</description>
    <label>Executed at</label>
    <type>DateTime</type>
</CustomField>