force-app/main/default/objects/Deployment_Execution__c/fields/Executed_by__c.field-meta.xml
<CustomField>
    <fullName>Executed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to User who executed the manual step</description>
    <label>Executed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manual_Deployment_Step_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>