force-app/main/default/objects/Deployment_Execution__c/fields/Execution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Execution_Comments__c</fullName>
    <description>Comments made during execution of manual step</description>
    <label>Execution Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>