force-app/main/default/objects/Deployment_Execution__c/fields/Manual_Deployment_Step__c.field-meta.xml
<CustomField>
    <fullName>Manual_Deployment_Step__c</fullName>
    <label>Manual Deployment Step</label>
    <referenceTo>Deployment_Step__c</referenceTo>
    <relationshipName>Manual_Deployment_Step_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>