force-app/main/default/objects/Deployment_Execution__c/fields/Reason_for_Creation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Creation__c</fullName>
    <description>Reason why this execution has been created</description>
    <label>Reason for Creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>