force-app/main/default/objects/Deployment_Execution__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <description>Reference to release that made the execution required</description>
    <label>Release</label>
    <length>20</length>
    <type>Text</type>
</CustomField>