force-app/main/default/objects/Deployment_Execution__c/validationRules/Cannot_Reopen_If_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Reopen_If_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; (ISPICKVAL(PRIORVALUE(Status__c), &quot;Done&quot;) || ISPICKVAL(PRIORVALUE(Status__c), &quot;Deferred&quot;))</errorConditionFormula>
    <errorMessage>Once finished, a Task cannot be reopened!</errorMessage>
</ValidationRule>